[gd_scene load_steps=6 format=3 uid="uid://bkkovyhdf4gi8"]

[ext_resource type="Script" path="res://script/Map.gd" id="1_45507"]
[ext_resource type="PackedScene" uid="uid://cjy8163c2o416" path="res://Head.tscn" id="1_ffrtp"]
[ext_resource type="PackedScene" uid="uid://mob140fhqgsx" path="res://Food.tscn" id="2_7prqe"]
[ext_resource type="PackedScene" uid="uid://0uhpt5pxrhxm" path="res://label/WaitLabel.tscn" id="4_564vj"]
[ext_resource type="PackedScene" uid="uid://co6hhtowv3wui" path="res://Body.tscn" id="4_vtcst"]

[node name="Map" type="Node2D"]
script = ExtResource("1_45507")
FoodScene = ExtResource("2_7prqe")
BodyScene = ExtResource("4_vtcst")
SnakeSpeed = 4.0

[node name="Head" parent="." instance=ExtResource("1_ffrtp")]

[node name="SnakeFrameTimer" type="Timer" parent="."]
autostart = true

[node name="WaitLabel" parent="." instance=ExtResource("4_564vj")]
offset_left = 560.0
offset_top = 310.0
offset_right = 791.0
offset_bottom = 396.0

[connection signal="area_entered" from="Head" to="." method="_on_head_area_entered"]
[connection signal="body_entered" from="Head" to="." method="_on_head_body_entered"]
[connection signal="timeout" from="SnakeFrameTimer" to="." method="_on_timer_timeout"]
